--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -16,10 +16,10 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--<item android:id="@+id/action_details"
+    <item android:id="@+id/action_details"
           android:icon="@drawable/action_search"
           android:title="@string/action_details"
-          app:showAsAction="ifRoom|withText" />-->
+          app:showAsAction="never" />
 
     <item android:id="@+id/action_add_polygon"
         android:title="@string/action_add_polygon"
