--- a/app/src/main/res/layout/item_comments_listview.xml
+++ b/app/src/main/res/layout/item_comments_listview.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:clickable="false"
+    >
 
     <ImageView
         android:layout_width="36dp"
