--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -72,47 +72,58 @@
             android:layout_height="match_parent"
             android:fillViewport="true"
             android:measureAllChildren="true">
+
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical" android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <RelativeLayout
+                <LinearLayout
+                    android:id="@+id/show_head"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:id="@+id/show_head"
-                    android:background="#EEEEEE">
+                    android:background="#FFFFFF"
+                    android:orientation="horizontal"
+                    android:weightSum="4">
 
-                    <TextView
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:id="@+id/show_title"
-                        android:textSize="24dp"
-                        android:paddingBottom="16dp"
-                        android:layout_alignParentTop="false"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="1dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_weight="3"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/show_type"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textSize="18dp" />
+
+                        <TextView
+                            android:id="@+id/show_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:lines="1"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textSize="24dp" />
+
+                    </LinearLayout>
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/show_type"
-                        android:src="@drawable/type_1"
-                        android:layout_alignTop="@+id/show_title"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true" />
+                        android:id="@+id/show_type_image"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_weight="1" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text=""
-                        android:id="@+id/show_by_time"
-                        android:textSize="12dp"
-                        android:layout_below="@+id/show_title"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true" />
-                </RelativeLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -122,7 +133,14 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="16dp"
                     android:orientation="vertical"
-                    android:background="#F5F5F5">
+                    android:background="#FFFFFF">
+
+                    <View
+                        android:id="@+id/separator1"
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:layout_marginBottom="5dp"
+                        android:background="#90909090" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
