--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -67,6 +67,7 @@
         slidingLayer:stickTo="bottom">
 
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/details_scrollview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -229,30 +230,27 @@
                         android:layout_marginTop="6dp"
                         android:text="Очищення озера від сміття, просвітницька робота серед населення" />
 
-                    <LinearLayout
-                        android:orientation="horizontal"
+                    <org.ecomap.android.app.ui.components.ExpandableHeightGridView
+                        android:id="@+id/gridview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp">
+                        android:layout_marginTop="25dp"
+                        android:columnWidth="100dp"
+                        android:gravity="center"
+                        android:horizontalSpacing="10dp"
+                        android:numColumns="auto_fit"
+                        android:stretchMode="columnWidth"
+                        android:verticalSpacing="10dp">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView3"
-                            android:src="@drawable/logo" />
+                    </org.ecomap.android.app.ui.components.ExpandableHeightGridView>
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView4"
-                            android:src="@drawable/logo" />
+                    <FrameLayout
+                        android:id="@+id/fragment_comments"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:layout="@layout/fragment_comments">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/imageView5"
-                            android:src="@drawable/logo" />
-                    </LinearLayout>
+                    </FrameLayout>
 
                 </LinearLayout>
 
