--- a/app/src/main/res/layout/problem_details_layout.xml
+++ b/app/src/main/res/layout/problem_details_layout.xml
@@ -1,78 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/details_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:measureAllChildren="true"
-    >
+    android:measureAllChildren="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="8dp"
-        android:paddingBottom="16dp"
-        android:orientation="vertical"
 
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-
             android:layout_gravity="top"
-            >
+
+            android:orientation="horizontal">
 
             <RatingBar
                 android:id="@+id/problemRating"
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="left"
                 android:isIndicator="true"
                 android:numStars="5"
-                android:stepSize="0.1"
-                android:layout_gravity="left"
                 android:rating="3"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true" />
+                android:stepSize="0.1" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/show_numOfLikes"
 
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="3"
-                android:gravity="right"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:layout_gravity="right"
+                android:gravity="right"
 
-                android:textSize="20sp"
-                android:id="@+id/show_numOfLikes" />
+                android:text="3"
+                android:textSize="20sp" />
 
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:id="@+id/imageView"
                 android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
                 android:layout_toLeftOf="@+id/show_numOfLikes"
                 android:layout_toStartOf="@+id/show_numOfLikes"
-                android:src="@drawable/heart_icon"
                 android:contentDescription="heart"
-                android:layout_marginRight="10dp" />
+                android:src="@drawable/heart_icon" />
 
             <TextView
+                android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/textRed"
-                android:text="unsolved"
-                android:id="@+id/textView6"
-
+                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:text="unsolved"
+
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/textRed" />
         </RelativeLayout>
 
         <TextView
@@ -99,8 +98,7 @@
         <TextView
             android:id="@+id/problemType"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView2"
@@ -130,19 +128,27 @@
             android:layout_marginTop="6dp"
             android:text="Очищення озера від сміття, просвітницька робота серед населення" />
 
-      <org.ecomap.android.app.ui.components.ExpandableHeightGridView
-          android:id="@+id/gridview"
-          android:columnWidth="100dp"
-          android:numColumns="auto_fit"
-          android:verticalSpacing="10dp"
-          android:horizontalSpacing="10dp"
-          android:stretchMode="columnWidth"
-          android:gravity="center"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="25dp">
+        <org.ecomap.android.app.ui.components.ExpandableHeightGridView
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:columnWidth="100dp"
+            android:gravity="center"
+            android:horizontalSpacing="10dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="10dp">
 
-      </org.ecomap.android.app.ui.components.ExpandableHeightGridView>
+        </org.ecomap.android.app.ui.components.ExpandableHeightGridView>
+
+        <FrameLayout
+            android:id="@+id/fragment_comments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_comments">
+
+        </FrameLayout>
 
 
     </LinearLayout>
