--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="16dp"
     tools:context=".CommentsFragment">
 
 
@@ -15,31 +16,31 @@
         android:layout_alignParentRight="false"
         android:layout_alignParentStart="false"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/AddCommentButton"
-        android:hint="My comment" />
+        android:layout_toLeftOf="@+id/addCommentButton"
+        android:hint="@string/write_comment" />
 
     <Button
-        android:id="@+id/AddCommentButton"
+        android:id="@+id/addCommentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="false"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:hint="Add"
-        android:text="Send" />
+        android:hint="Post comment"
+        android:text="@string/button_send_comment_caption" />
 
 
-    <ListView
+<!--
+    <org.ecomap.android.app.ui.components.ExpandableListView
         android:id="@+id/lstComments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="false"
-        android:layout_alignParentStart="false"
         android:layout_alignParentTop="false"
         android:layout_below="@+id/editComment"
       >
 
-    </ListView>
+    </org.ecomap.android.app.ui.components.ExpandableListView>
+-->
 
 
     <!--<com.google.android.gms.plus.PlusOneButton -->
