--- a/app/src/main/res/layout/map_layout_main.xml
+++ b/app/src/main/res/layout/map_layout_main.xml
@@ -43,20 +43,18 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/show_type"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textSize="18dp" />
-
-                        <TextView
                             android:id="@+id/show_title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:lines="1"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:textSize="24dp" />
+                            style="@style/Title" />
+
+                        <TextView
+                            android:id="@+id/show_date_added"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/Caption" />
 
                     </LinearLayout>
 
@@ -162,45 +160,29 @@
 
                     <TextView
                         android:id="@+id/textView2"
+                        style="@style/Subhead"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/string_description"
-                        android:textStyle="bold"
-                        android:layout_marginTop="32dp" />
+                        android:text="@string/string_description" />
 
                     <TextView
                         android:id="@+id/show_content"
+                        style="@style/Body2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"/>
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp"
-                        android:textStyle="bold"
-                        android:text="@string/string_suggested_solution" />
+                        style="@style/Subhead"
+                        android:text="@string/string_suggested_solution"/>
 
                     <TextView
                         android:id="@+id/show_proposal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp" />
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="32dp"
-                        android:textStyle="bold"
-                        android:text="@string/string_added_by" />
-
-                    <TextView
-                        android:id="@+id/show_date_added"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp" />
+                        style="@style/Body2"/>
 
                     <org.ecomap.android.app.widget.ExpandableHeightGridView
                         android:id="@+id/gridview"
