--- a/app/src/main/res/layout/activity_add_problem.xml
+++ b/app/src/main/res/layout/activity_add_problem.xml
@@ -150,6 +150,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
+                android:layout_marginStart="4dp"
                 android:background="@drawable/dotted_border" >
 
                 <Button
